[package]
name = "transaction-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
rust_decimal = { version = "1.26.1", features = ["serde-str"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "io-util"] }
sqlx = { version = "0.6.1", features = [ "runtime-tokio-native-tls" ,"decimal",  "sqlite" ] }
futures = "0.3.24"