[package]
name = "transaction-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
csv = "1.4.0"
rust_decimal = { version = "1.39", features = ["serde-str"] }
rust_decimal_macros = "1.39"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-util"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
futures = "0.3.31"
